# RL-AD

./: .gitignore  README.md  gym.py  log_main.out  main.py  pyproject.toml  test_evaluation_framework.py
agents/: evaluation.py
agents/custom/: custom.py
agents/dqn/: README.md  custom_env_test.py  sb3_dqn_config2_train.py  sb3_dqn_config3_train.py  sb3_dqn_run.py  sb3_dqn_train.py  sb3_test.py
agents/ppo/: README.md  ppo.py  test_evaluation_framework.py
agents/ppo/training_model/PPO_11/: events.out.tfevents.1764465392.DESKTOP-D2L7V0P.16028.0
agents/ppo/training_model/PPO_12/: events.out.tfevents.1764466517.DESKTOP-D2L7V0P.97988.0
agents/rule_based/: __init__.py  agent.py  init_test_rule_based.py  readme.md  test_rule_based.py
agents/sac/: agent.py  custom.py  evaluation.py  job_agent.sh  job_train_sb3.sh  job_train_sb3_multicore.sh  job_train_sb3_multicore_custom.sh  job_train_sb3_multicore_overtake.sh  job_train_sb3_noise.sh  job_train_sb3_noise_penalty.sh  job_train_sb3_ori.sh  job_train_sb3_penalty.sh  main.py  readme.md  sac_actor_highway.pth  test.py  test_evaluation_framework_noise.py  test_evaluation_framework_noise_penalty.py  test_evaluation_framework_ori.py  test_sb3.py  test_sb3_108132.py  test_sb3_108430.py  test_sb3_108437.py  test_sb3_CustomIDMVehicle.py  test_sb3_noise.py  test_sb3_ori.py  train.py  train_sb3.py  train_sb3_multicore.py  train_sb3_multicore_custom.py  train_sb3_multicore_overtake.py  train_sb3_noise.py  train_sb3_noise_penalty.py  train_sb3_ori.py  train_sb3_penalty.py
demo/: demo_script.py
initial_demo/: test_rule_based.py
(+4 files in other folders)
