[project]
name = "rl-ad"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[other]>=1.2.2",
    "highway-env>=1.10.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "rich>=14.2.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.2.0",
    "tqdm>=4.67.1",
]
